<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/left_column"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                style="@android:style/TextAppearance.DeviceDefault.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/specific_heat_of_dry_air"
                android:textColor="@android:color/black"/>

            <TextView
                style="@android:style/TextAppearance.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/heat_of_vaporization"
                android:textColor="@android:color/black"/>

            <TextView
                style="@android:style/TextAppearance.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/specific_heat_of_humid_air"
                android:textColor="@android:color/black"/>

            <TextView
                style="@android:style/TextAppearance.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/temperature"
                android:textColor="@android:color/black"/>

            <TextView
                style="@android:style/TextAppearance.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/moisture_content"
                android:textColor="@android:color/black"/>

            <Button
                android:id="@+id/submit_enthalpy_calculation_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submit"/>

            <TextView
                android:id="@+id/enthalpy_result"
                style="@android:style/TextAppearance.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="40dp"
                android:layout_marginTop="40dp"
                android:text="@string/result"/>

            <TextView
                style="@android:style/TextAppearance.Medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/used_formula"/>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/enthalpy_formula"/>


        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.3"
            android:orientation="vertical">

            <EditText
                android:id="@+id/Specific_Heat_Dry_Air"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:hint="@string/specific_heat_of_dry_air_hint"
                android:inputType="numberDecimal"
                android:textSize="12sp"/>

            <EditText
                android:id="@+id/Heat_of_Vaporization"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:hint="@string/heat_of_vaporization_hint"
                android:inputType="numberDecimal"
                android:textSize="12sp"/>

            <EditText
                android:id="@+id/Specific_Heat_Humid_Air"
                android:layout_width="match_parent"
                android:layout_height="33dp"
                android:hint="@string/specific_heat_of_humid_air_hint"
                android:inputType="numberDecimal"
                android:textSize="12sp"/>


            <EditText
                android:id="@+id/Enthalpy_Temperature"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/temperature_hint"
                android:inputType="numberDecimal"
                android:textSize="12sp"/>

            <EditText
                android:id="@+id/Moisture_Content"
                android:layout_width="match_parent"
                android:layout_height="32dp"
                android:hint="@string/moisture_content_hint"
                android:inputType="numberDecimal"
                android:textSize="12sp"/>


        </LinearLayout>

    </LinearLayout>

</ScrollView>