<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/perfect_fluid_beroullis_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_calculation"/>

        <Spinner
            android:id="@+id/perfect_fluids_bernoullis_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/perfect_fluids_bernoullis_mean_fluid_velocity_first_section_text_view"
            style="@android:style/TextAppearance.DeviceDefault.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_section_mean_fluid_velocity"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/perfect_fluids_bernoullis_mean_fluid_velocity_first_section_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Û"
            android:inputType="numberDecimal"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/perfect_fluids_bernoullis_elevation_first_section_text_view"
            style="@android:style/TextAppearance.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_section_elevation"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/perfect_fluids_bernoullis_elevation_first_section_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="z"
            android:inputType="numberDecimal"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/perfect_fluids_bernoullis_static_value_first_section_text_view"
            style="@android:style/TextAppearance.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/first_section_static_value"
            android:textColor="@android:color/black"
            android:visibility="visible"/>

        <EditText
            android:id="@+id/perfect_fluids_bernoullis_static_value_first_section_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ps"
            android:inputType="numberDecimal"
            android:textSize="12sp"
            android:visibility="visible"/>

        <TextView
            android:id="@+id/perfect_fluids_bernoullis_mean_fluid_velocity_second_section_text_view"
            style="@android:style/TextAppearance.DeviceDefault.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_section_mean_fluid_velocity"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/perfect_fluids_bernoullis_mean_fluid_velocity_second_section_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Û"
            android:inputType="numberDecimal"
            android:textSize="12sp"/>

        <TextView
            android:id="@+id/perfect_fluids_bernoullis_elevation_second_section_text_view"
            style="@android:style/TextAppearance.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_section_elevation"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/perfect_fluids_bernoullis_elevation_second_section_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="z"
            android:inputType="numberDecimal"
            android:textSize="12sp"/>


        <TextView
            android:id="@+id/perfect_fluids_bernoullis_static_value_second_section_text_view"
            style="@android:style/TextAppearance.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/second_section_static_value"
            android:textColor="@android:color/black"
            android:visibility="visible"/>

        <EditText
            android:id="@+id/perfect_fluids_bernoullis_static_value_second_section_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Ps"
            android:inputType="numberDecimal"
            android:textSize="12sp"
            android:visibility="visible"/>

        <TextView
            style="@android:style/TextAppearance.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/density"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/perfect_fluids_bernoullis_density_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="ρ"
            android:inputType="numberDecimal"
            android:textSize="12sp"/>


        <TextView
            style="@android:style/TextAppearance.Small"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/acceleration_of_gravity"
            android:textColor="@android:color/black"/>

        <EditText
            android:id="@+id/perfect_fluids_bernoullis_acceleration_of_gravity_edit_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="g"
            android:inputType="numberDecimal"
            android:text="9.81"
            android:textSize="12sp"/>

        <Button
            android:id="@+id/perfect_fluids_bernoullis_equation_by_sum_of_work_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/by_sum_of_work_calculator"/>

        <Button
            android:id="@+id/perfect_fluids_bernoullis_equation_by_sum_of_pressure_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/by_sum_of_pressure_calculator"/>

        <Button
            android:id="@+id/perfect_fluids_bernoullis_equation_by_sum_of_height_submit_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/by_sum_of_height_calculator"/>


        <TextView
            android:id="@+id/perfect_fluids_bernoullis_equation_result"
            style="@android:style/TextAppearance.Large"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"/>

    </LinearLayout>

</ScrollView>