<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">
<TextView
    style="@android:style/TextAppearance.Large"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:gravity="center"
    android:text="@string/celsius_converter"/>
    <EditText
        style="@android:style/TextAppearance.Medium"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:hint="@string/input_temperature"
        android:inputType="numberSigned|numberDecimal"
        android:id="@+id/input_temperature_celsius_converter"/>
    <TextView
        android:id="@+id/celsius_converter_result"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/result"
        android:textAppearance="@android:style/TextAppearance.Large"
        android:layout_margin="8dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit"
        android:textAllCaps="true"
        android:layout_margin="8dp"
        android:onClick="submitCelsiusConverterEquation"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="100dp" />
</LinearLayout>
